# CTKPluginTutorials

./: CMakeLists.txt  README
Apps/: CMakeLists.txt
Apps/UseCTKPlugin/: CMakeLists.txt  UseCTKPluginMain.cpp
Plugins/: CMakeLists.txt
Plugins/org.mydomain.serviceeventlistener/: CMakeLists.txt  ServiceEventListenerActivator.cpp  ServiceEventListenerActivator_p.h
